bridge/base/celery-deployment.yaml
#! celery-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: celery
    namespace: django-docker-compose-celery-redis-postgresql
    labels:
        com.docker.compose.project: django-docker-compose-celery-redis-postgresql
        com.docker.compose.service: celery
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: django-docker-compose-celery-redis-postgresql
            com.docker.compose.service: celery
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: django-docker-compose-celery-redis-postgresql
                com.docker.compose.service: celery
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: celery
                  image: django-docker-compose-celery-redis-postgresql-celery
                  imagePullPolicy: IfNotPresent
                  args:
                    - celery
                    - -A
                    - core
                    - worker
                    - -l
                    - INFO
                  volumeMounts:
                    - name: usr-src-app
                      mountPath: /usr/src/app
            volumes:
                - name: usr-src-app
                  hostPath:
                    path: C:\Users\Dell\Django-Docker-Compose-Celery-Redis-PostgreSQL
